# Ripple

./: .flake8  .gitignore  LICENSE.txt  README.md  docker-compose.yml  package-lock.json  package.json
Backend/: Dockerfile  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 06c4a66ce70a_created_image_field.py  1460c52e4040_initial.py  2a4c52f6c31f_.py  3734fb375e6a_add_message_model.py  64e84dd0ae0b_forward.py  8eecaec88e65_created_categories.py  a0dac38e5ac5_created_image_field.py  c54fbf2c6763_rollback_gigs.py  d5c4a4f9d5b5_initial_commit_2.py  fa18d321dfa0_added_image_field_to_gigs.py
Backend/app/: main.py
Backend/app/api/v1/: main.py
Backend/app/api/v1/endpoints/: auth.py  category.py  gig.py  message.py  order.py  review.py  user.py
Backend/app/core/: config.py  container.py  database.py  dependencies.py  exceptions.py  security.py
Backend/app/model/: base_model.py  user.py
Backend/app/models/: categories.py  message.py  order.py  review.py  services.py  user.py
Backend/app/repository/: __init__.py  base_repository.py  category_repository.py  gig_repository.py  message_repository.py  order_repository.py  user_repository.py
Backend/app/schemas/: auth.py  category.py  message.py  order.py  services.py  user.py
Backend/app/services/: __init__.py  auth_service.py  base_service.py  category_service.py  connection_manager.py  gig_service.py  message_service.py  order_service.py  review_service.py  user_service.py
Backend/app/templates/: email_code.html
Backend/app/utils/: verification_code.py
backend/: Dockerfile  entrypoint.sh  gunicorn_conf.py  pyproject.toml
backend/alembic/: env.py
backend/app/api/v1/endpoints/: auth.py  gig.py  message.py  order.py  review.py  user.py
backend/app/core/: config.py  database.py  elasticsearch.py  security.py
backend/app/models/: message.py  services.py  user.py
backend/app/repository/: __init__.py  base_repository.py  category_repository.py  gig_repository.py  message_repository.py  order_repository.py  review_repository.py  user_repository.py
backend/app/schemas/: auth.py  message.py  order.py  review.py  services.py  user.py
backend/app/services/: auth_service.py  connection_manager.py  gig_service.py  message_service.py  order_service.py  review_service.py  user_service.py
backend/app/tasks/: email_service.py
backend/app/utils/: file_manager.py  security.py  verification_code.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+106 files in other folders)
