[tool.poetry]
name = "ripple"
version = "0.1.0"
description = "freelance platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["uvicorn"], version = "^0.111.0"}
jose = "^1.0.0"
python-dotenv = "^1.0.1"
psycopg = "^3.1.18"
flake8 = "^7.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
sqlmodel = "^0.0.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
