[tool.poetry]
name = "ripple"
version = "0.1.0"
description = "portfolio project"
authors = ["VoiceOfDarkness <abil.samedov2016@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.111.0"}
sqlmodel = "^0.0.18"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
